[package]
description = "command line to generate a boot.dat from a payload for the switch"
edition = "2021"
license-file = "LICENSE"
name = "boot-dat-gen"
repository = "https://github.com/marcograss/boot-dat-gen"
version = "0.2.2"

[dependencies]
anyhow = "1.0.97"
clap = "4.5.31"
tx-custom-boot = "0.3.0"
